Ámbito error variable gamma

--- a/06. mayo 5/index.html
+++ b/06. mayo 5/index.html
@@ -71,8 +71,9 @@
     }
     if (true) {
       let ambito = 5;
-      console.log("dentro segunda ", ambito);
+      let gamma = 1.25;
+      console.log("dentro segunda ", ambito, gamma);
     }
-    console.log("fuera ", ambito);
+    console.log("fuera ", ambito,gamma);//error gamma no esta definida en ese ámbito global solo en segunda condicion
   </script>
 </html>
