--- a/06. mayo 5/ejercicioVariables.html
+++ b/06. mayo 5/ejercicioVariables.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <!-- 
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <!-- 
   El ejercicio debe declarar dos variables [tener presente cual es la mejor opcion para declarar variables]
   1. Nombre
   2. Numero de segundos
@@ -15,11 +15,28 @@
 
   Hola nombredigitado, la candidad de horas es numerohoras, la cantidad de minutos es numerominutos y la cantidad de segundos es numerosegundos
   -->
-  <h3>Conversion segundos a  Horas, minutos y segundos</h3>
-  <p id="resultado">Hola nombredigitado, la candidad de horas es numerohoras, la cantidad de minutos es numerominutos y la cantidad de segundos es numerosegundos</p>
-  <script>
-    
+    <h3>Conversion segundos a Horas, minutos y segundos</h3>
+    <p id="resultado">
+      Hola nombredigitado, la candidad de horas es numerohoras, la cantidad de
+      minutos es numerominutos y la cantidad de segundos es numerosegundos
+    </p>
+    <script>
+      let resultado = document.getElementById("resultado");
+      let nombre = "Javier";
+      let cantidadSegundos = 7569;
+      //calculo las horas
+      let horas = parseInt(cantidadSegundos / 3600);
+      let horasFloor = Math.floor(cantidadSegundos/3600);
+      //calculo segundos restantes luego de restar las horas
+      cantidadSegundos = cantidadSegundos - horas * 3600;
+      //calcular minutos
+      let minutos = parseInt(cantidadSegundos / 60);
 
-  </script>
-</body>
+      //calculoar segundos
+      let segundos = cantidadSegundos % 60;
+      resultado.innerHTML = `Hola ${nombre}, la candidad de horas es ${horas}, horasfloor es ${horasFloor}, la cantidad de minutos es ${minutos} y la cantidad de segundos es ${segundos} para los segundos digitados que fueron ${
+        horas * 3600 + minutos * 60 + segundos
+      }`;
+    </script>
+  </body>
 </html>
