--- a/06. mayo 5/Ejemplos/02. arreglos.html
+++ b/06. mayo 5/Ejemplos/02. arreglos.html
@@ -128,6 +128,9 @@
       // .reduce() - sumar longitudes de cada string
       const totalCaracteres = arrayOriginal.reduce((acc, val) => acc + val.length, 0);
       tabla.innerHTML += fila(".reduce() - suma de longitudes", totalCaracteres);
+      console.log(arrayOriginal[1]);
+      console.log(arrayOriginal[1]="cambio");
+      
     }
 
 
