para impresion cadenas

--- a/07. Mayo 07/para.html
+++ b/07. Mayo 07/para.html
@@ -7,7 +7,14 @@
   </head>
   <body>
     <script>
-      for (let i = 10; i <= 30; i += 2) {
+      /*hacer un ciclo que imprima los numeros pares desde el numero 10 hasta el numero 30 inclusives
+
+      for (let i = 10; i <= 30; i+=2) {
+        console.log(i);
+      }*/
+
+      // hacer una modificacion para imprimir los numeros del 30 al 10 sin incluirlos
+      for (let i = 28; i > 10; i -= 2) {
         console.log(i);
       }
     </script>
