--- a/09. Mayo 08/ejercicio2.html
+++ b/09. Mayo 08/ejercicio2.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bienvenida en JavaScript</title>
+  <title>Verificar Palíndromo</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
+      background-color: #e8f0fe;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -24,16 +24,16 @@
       width: 300px;
     }
 
-    input[type="text"], input[type="number"] {
+    input[type="text"] {
       width: 100%;
       padding: 0.5rem;
-      margin: 0.5rem 0;
+      margin: 1rem 0;
       border: 1px solid #ccc;
       border-radius: 0.5rem;
     }
 
     button {
-      background-color: #007bff;
+      background-color: #28a745;
       color: white;
       padding: 0.5rem 1rem;
       border: none;
@@ -43,7 +43,7 @@
     }
 
     button:hover {
-      background-color: #0056b3;
+      background-color: #218838;
     }
 
     .resultado {
@@ -54,26 +54,25 @@
 </head>
 <body>
   <div class="container">
-    <h2>Bienvenida</h2>
-    <input type="text" id="nombre" placeholder="Nombre completo">
-    <input type="number" id="edad" placeholder="Edad en años">
-    <button onclick="mostrarBienvenida()">Enviar</button>
-    <div class="resultado" id="resultado">En este espacio se debe imprimir el resultado</div>
+    <h2>Verificador de Palíndromos</h2>
+    <input type="text" id="palabra" placeholder="Ingresa una palabra">
+    <button onclick="verificarPalindromo()">Verificar</button>
+    <div class="resultado" id="resultado"></div>
   </div>
 
   <script>
-    function mostrarBienvenida() {
-      const nombre = document.getElementById("nombre").value;
-      const edad = document.getElementById("edad").value;
- 
-      const resultado = document.getElementById("resultado");
- 
-      if (nombre === "" || edad === "") {
-        resultado.textContent = "por favor, completa todos los campos.";
-        return;
+    function verificarPalindromo() {
+      const palabra = document.getElementById("palabra").value;
+      const invertida = palabra.split("").reverse().join("");
+
+      let mensaje;
+      if (palabra === invertida) {
+        mensaje = "La palabra es un palíndromo.";
+      } else {
+        mensaje = "La palabra no es un palíndromo.";
       }
- 
-      resultado.textContent = `¡Hola ${nombre.toUpperCase()}! tienes ${edad*12} años. Bienvenido.`;
+
+      document.getElementById("resultado").textContent = mensaje;
     }
   </script>
 </body>
