--- a/09. Mayo 08/ejercicio3.html
+++ b/09. Mayo 08/ejercicio3.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bienvenida en JavaScript</title>
+  <title>Capturar Palabras con For</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
+      background-color: #fef9ef;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -21,10 +21,10 @@
       border-radius: 1rem;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       text-align: center;
-      width: 300px;
+      width: 350px;
     }
 
-    input[type="text"], input[type="number"] {
+    input[type="text"] {
       width: 100%;
       padding: 0.5rem;
       margin: 0.5rem 0;
@@ -33,7 +33,7 @@
     }
 
     button {
-      background-color: #007bff;
+      background-color: #ff9800;
       color: white;
       padding: 0.5rem 1rem;
       border: none;
@@ -43,37 +43,31 @@
     }
 
     button:hover {
-      background-color: #0056b3;
+      background-color: #e68900;
     }
 
     .resultado {
       margin-top: 1rem;
       font-weight: bold;
+      text-align: left;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h2>Bienvenida</h2>
-    <input type="text" id="nombre" placeholder="Nombre completo">
-    <input type="number" id="edad" placeholder="Edad en años">
-    <button onclick="mostrarBienvenida()">Enviar</button>
-    <div class="resultado" id="resultado">En este espacio se debe imprimir el resultado</div>
+    <h2>Ingresa 5 Palabras</h2>
+    <input type="text" id="palabra0" placeholder="Palabra #1">
+    <input type="text" id="palabra1" placeholder="Palabra #2">
+    <input type="text" id="palabra2" placeholder="Palabra #3">
+    <input type="text" id="palabra3" placeholder="Palabra #4">
+    <input type="text" id="palabra4" placeholder="Palabra #5">
+    <button onclick="mostrarPalabras()">Mostrar en Mayúsculas</button>
+    <div class="resultado" id="resultado"></div>
   </div>
 
   <script>
-    function mostrarBienvenida() {
-      const nombre = document.getElementById("nombre").value;
-      const edad = document.getElementById("edad").value;
- 
-      const resultado = document.getElementById("resultado");
- 
-      if (nombre === "" || edad === "") {
-        resultado.textContent = "por favor, completa todos los campos.";
-        return;
-      }
- 
-      resultado.textContent = `¡Hola ${nombre.toUpperCase()}! tienes ${edad*12} años. Bienvenido.`;
+    function mostrarPalabras() {
+      const palabrasMayus = [];
     }
   </script>
 </body>
