--- a/09. Mayo 08/ejercicio4.html
+++ b/09. Mayo 08/ejercicio4.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bienvenida en JavaScript</title>
+  <title>Sumar Números Positivos</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
+      background-color: #eef5ff;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -21,10 +21,10 @@
       border-radius: 1rem;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       text-align: center;
-      width: 300px;
+      width: 350px;
     }
 
-    input[type="text"], input[type="number"] {
+    input[type="number"] {
       width: 100%;
       padding: 0.5rem;
       margin: 0.5rem 0;
@@ -40,6 +40,7 @@
       border-radius: 0.5rem;
       cursor: pointer;
       font-size: 1rem;
+      margin-top: 0.5rem;
     }
 
     button:hover {
@@ -54,26 +55,18 @@
 </head>
 <body>
   <div class="container">
-    <h2>Bienvenida</h2>
-    <input type="text" id="nombre" placeholder="Nombre completo">
-    <input type="number" id="edad" placeholder="Edad en años">
-    <button onclick="mostrarBienvenida()">Enviar</button>
-    <div class="resultado" id="resultado">En este espacio se debe imprimir el resultado</div>
+    <h2>Sumar Números Positivos</h2>
+    <input type="number" id="numero" placeholder="Ingresa un número">
+    <button onclick="agregarNumero()">Agregar</button>
+    <div class="resultado" id="resultado"></div>
   </div>
 
   <script>
-    function mostrarBienvenida() {
-      const nombre = document.getElementById("nombre").value;
-      const edad = document.getElementById("edad").value;
- 
-      const resultado = document.getElementById("resultado");
- 
-      if (nombre === "" || edad === "") {
-        resultado.textContent = "por favor, completa todos los campos.";
-        return;
-      }
- 
-      resultado.textContent = `¡Hola ${nombre.toUpperCase()}! tienes ${edad*12} años. Bienvenido.`;
+    let suma = 0;
+    let numero;
+
+    function agregarNumero() {
+      
     }
   </script>
 </body>
