--- a/09. Mayo 08/ejercicio1.html
+++ b/09. Mayo 08/ejercicio1.html
@@ -73,7 +73,7 @@
         return;
       }
  
-      resultado.textContent = `¡Hola ${nombre.toUpperCase()}! tienes ${edad*12} años. Bienvenido.`;
+      resultado.textContent = `¡Hola ${nombre.toUpperCase()}! tienes ${edad*12} meses. Bienvenido.`;
     }
   </script>
 </body>
