--- a/09. Mayo 08/ejercicio3.html
+++ b/09. Mayo 08/ejercicio3.html
@@ -1,74 +1,113 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Capturar Palabras con For</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #fef9ef;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Capturar Palabras con For</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #fef9ef;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+      }
 
-    .container {
-      background-color: #fff;
-      padding: 2rem;
-      border-radius: 1rem;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      text-align: center;
-      width: 350px;
-    }
+      .container {
+        background-color: #fff;
+        padding: 2rem;
+        border-radius: 1rem;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        text-align: center;
+        width: 350px;
+      }
 
-    input[type="text"] {
-      width: 100%;
-      padding: 0.5rem;
-      margin: 0.5rem 0;
-      border: 1px solid #ccc;
-      border-radius: 0.5rem;
-    }
+      input[type="text"] {
+        width: 100%;
+        padding: 0.5rem;
+        margin: 0.5rem 0;
+        border: 1px solid #ccc;
+        border-radius: 0.5rem;
+      }
 
-    button {
-      background-color: #ff9800;
-      color: white;
-      padding: 0.5rem 1rem;
-      border: none;
-      border-radius: 0.5rem;
-      cursor: pointer;
-      font-size: 1rem;
-    }
+      button {
+        background-color: #ff9800;
+        color: white;
+        padding: 0.5rem 1rem;
+        border: none;
+        border-radius: 0.5rem;
+        cursor: pointer;
+        font-size: 1rem;
+      }
 
-    button:hover {
-      background-color: #e68900;
-    }
+      button:hover {
+        background-color: #e68900;
+      }
 
-    .resultado {
-      margin-top: 1rem;
-      font-weight: bold;
-      text-align: left;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h2>Ingresa 5 Palabras</h2>
-    <input type="text" id="palabra0" placeholder="Palabra #1">
-    <input type="text" id="palabra1" placeholder="Palabra #2">
-    <input type="text" id="palabra2" placeholder="Palabra #3">
-    <input type="text" id="palabra3" placeholder="Palabra #4">
-    <input type="text" id="palabra4" placeholder="Palabra #5">
-    <button onclick="mostrarPalabras()">Mostrar en Mayúsculas</button>
-    <div class="resultado" id="resultado"></div>
-  </div>
+      .resultado {
+        margin-top: 1rem;
+        font-weight: bold;
+        text-align: left;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <h2>Ingresa 5 Palabras</h2>
+      <input type="text" id="palabra0" placeholder="Palabra #1" />
+      <input type="text" id="palabra1" placeholder="Palabra #2" />
+      <input type="text" id="palabra2" placeholder="Palabra #3" />
+      <input type="text" id="palabra3" placeholder="Palabra #4" />
+      <input type="text" id="palabra4" placeholder="Palabra #5" />
+      <button onclick="mostrarPalabras()">Mostrar en Mayúsculas</button>
+      <div class="resultado" id="resultado"></div>
+    </div>
 
-  <script>
-    function mostrarPalabras() {
-      const palabrasMayus = [];
-    }
-  </script>
-</body>
+    <script>
+      function mostrarPalabras() {
+        // Resultado 1 trayendo los valores de las cajas de texto
+        /*const palabrasMayus = [];
+        // traer los datos de cada palabra al arreglo convertidos en mayuscula
+
+        for (let i = 0; i < 5; i++) {
+          let palabra=document.getElementById(`palabra${i}`).value;
+          palabrasMayus.push(palabra);
+        }
+        //validar que los campos no estan vacios
+
+        //imprimir el mensaje
+        let mensaje="Palabra en mayuscula <br>";
+        for (let i = 0; i < 5; i++) {
+          mensaje+=`${palabrasMayus[i].toUpperCase()} <br>`;
+        }
+    
+
+        let resultado = document.getElementById("resultado");
+        resultado.innerHTML = mensaje;*/
+
+        // resultado 2 trayendo las cajas de texto
+
+        const palabras = [];
+        for (let i = 0; i < 5; i++) {
+          palabras.push(document.getElementById(`palabra${i}`));
+        }
+        for (const palabra of palabras) {
+          if (palabra.value === "") {
+            let resultado = document.getElementById("resultado");
+            resultado.innerHTML = "favor digitar la palabras";
+            return;
+          }
+        }
+
+        let mensaje="Palabra en mayuscula <br>";
+        for (let i = 0; i < 5; i++) {
+          mensaje+=`${palabras[i].value.toUpperCase()} <br>`;
+        }
+        let resultado = document.getElementById("resultado");
+        resultado.innerHTML = mensaje;
+      }
+    </script>
+  </body>
 </html>
