--- a/09. Mayo 08/ejercicio4.html
+++ b/09. Mayo 08/ejercicio4.html
@@ -1,73 +1,102 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sumar Números Positivos</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #eef5ff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sumar Números Positivos</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #eef5ff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+      }
 
-    .container {
-      background-color: #fff;
-      padding: 2rem;
-      border-radius: 1rem;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      text-align: center;
-      width: 350px;
-    }
+      .container {
+        background-color: #fff;
+        padding: 2rem;
+        border-radius: 1rem;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        text-align: center;
+        width: 350px;
+      }
 
-    input[type="number"] {
-      width: 100%;
-      padding: 0.5rem;
-      margin: 0.5rem 0;
-      border: 1px solid #ccc;
-      border-radius: 0.5rem;
-    }
+      input[type="number"] {
+        width: 100%;
+        padding: 0.5rem;
+        margin: 0.5rem 0;
+        border: 1px solid #ccc;
+        border-radius: 0.5rem;
+      }
 
-    button {
-      background-color: #007bff;
-      color: white;
-      padding: 0.5rem 1rem;
-      border: none;
-      border-radius: 0.5rem;
-      cursor: pointer;
-      font-size: 1rem;
-      margin-top: 0.5rem;
-    }
+      button {
+        background-color: #007bff;
+        color: white;
+        padding: 0.5rem 1rem;
+        border: none;
+        border-radius: 0.5rem;
+        cursor: pointer;
+        font-size: 1rem;
+        margin-top: 0.5rem;
+      }
 
-    button:hover {
-      background-color: #0056b3;
-    }
+      button:hover {
+        background-color: #0056b3;
+      }
 
-    .resultado {
-      margin-top: 1rem;
-      font-weight: bold;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h2>Sumar Números Positivos</h2>
-    <input type="number" id="numero" placeholder="Ingresa un número">
-    <button onclick="agregarNumero()">Agregar</button>
-    <div class="resultado" id="resultado"></div>
-  </div>
+      .resultado {
+        margin-top: 1rem;
+        font-weight: bold;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <h2>Sumar Números Positivos</h2>
+      <input  id="numero" placeholder="Ingresa un número" />
+      <button onclick="agregarNumero()">Agregar</button>
+      <div class="resultado" id="resultado"></div>
+    </div>
 
-  <script>
-    let suma = 0;
-    let numero;
+    <script>
+      // Paso 1: obtener el objeto que recibe los números
+      const input = document.getElementById("numero");
 
-    function agregarNumero() {
-      
-    }
-  </script>
-</body>
+      let suma = 0;
+      let detenido = false;
+
+      // Paso 2: crear un ciclo que lea números positivos y finalice cuando lea un número negativo
+      function agregarNumero() {
+        if (detenido) return;
+
+        const valor = Number(input.value);
+
+        if (isNaN(valor)) {
+          document.getElementById(
+            "resultado"
+          ).innerHTML ="Digite un numero";
+          input.value = "";
+          return;
+        }
+
+        if (valor < 0) {
+          detenido = true;
+          document.getElementById(
+            "resultado"
+          ).innerHTML = `<strong>Proceso terminado.</strong><br>Suma total: ${suma}`;
+          return;
+        }
+
+        suma += valor;
+        input.value = "";
+
+        document.getElementById("resultado").innerHTML = `Suma actual: ${suma}`;
+      }
+    </script>
+
+    
+  </body>
 </html>
