--- a/12. Mayo 13/createElement.html
+++ b/12. Mayo 13/createElement.html
@@ -12,12 +12,13 @@
     let resultado = document.getElementById("resultado");
     let div = document.createElement("div");
     let span = document.createElement("span");
-    let br = document.createElement("br")
+    let br = document.createElement("br");
     let img = document.createElement("img");
     //resultado.textContent = img.isConnected;
     div.style.backgroundColor = "red";
     div.textContent = "contenido del div";
     img.src = "js.png";
+    let img2 = img.cloneNode();
     let comentario = document.createComment("Esto es un comentario");
     let text = document.createTextNode("Hola");
     //clonar un nodo
@@ -25,14 +26,15 @@
     div.id = "div1";
     div.className = "div";
     div.style = "color:blue";
-    span.textContent="texto dentro del span"
+    span.textContent = "texto dentro del span";
+    div2.textContent="contenido div 2"
     //resultado.textContent=div.getAttributeNames();//este metodo trae la lista de propiedades del nodo
     resultado.appendChild(br);
     resultado.appendChild(img);
     resultado.appendChild(div);
     resultado.appendChild(span);
-
-   
-    
+    document.body.appendChild(div2)
+    document.body.appendChild(img2)
+    console.log(div.isConnected);
   </script>
 </html>
