--- a/12. Mayo 13/dibujar_tabla.html
+++ b/12. Mayo 13/dibujar_tabla.html
@@ -44,10 +44,10 @@
     <input type="number" id="filas" min="1" value="3" />
     <br />
     <label for="columnas">Número de columnas:</label>
-    <input type="number" id="columnas" min="1" value="4" /><br />
+    <input type="number" id="columnas" min="0" value="4" /><br />
     <button onclick="crearTabla()">Crear Tabla</button>
 
-    <div id="contenedorTabla"></div>
+    <div id="contenedorTabla">Cotenedor</div>
 
     <script>
       function crearTabla() {
