--- a/12. Mayo 13/insertadjacent.html
+++ b/12. Mayo 13/insertadjacent.html
@@ -26,6 +26,7 @@
     div.insertAdjacentElement("afterbegin",despuesInicio)
     div.insertAdjacentElement("beforeend",antesFinal)
     div.insertAdjacentElement("afterend",DespuesFinal)
+    div.insertAdjacentHTML("beforebegin","<strong>texto</strong>")
     /*div.appendChild(antesInicio);
     div.appendChild(despuesInicio);
     div.appendChild(antesFinal);
