--- a/13. Mayo 14/identificarTriangulo.html
+++ b/13. Mayo 14/identificarTriangulo.html
@@ -1,34 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Tipo de Triángulo</title>
-    <style>
-      body {
-        font-family: Arial;
-        text-align: center;
-        margin: 20px;
-      }
-      input,
-      button {
-        margin: 5px;
-        padding: 8px;
-      }
-      #resultado {
-        margin-top: 10px;
-        font-weight: bold;
-      }
-    </style>
-  </head>
-  <body>
-    <h2>Identificador de Triángulo</h2>
-    <input type="number" id="lado1" placeholder="Lado 1" />
-    <input type="number" id="lado2" placeholder="Lado 2" />
-    <input type="number" id="lado3" placeholder="Lado 3" />
-    <br />
-    <button>Calcular</button>
-    <div id="resultado"></div>
+<head>
+  <meta charset="UTF-8">
+  <title>Tipo de Triángulo</title>
+  <style>
+    body { font-family: Arial; text-align: center; margin: 20px; }
+    input, button { margin: 5px; padding: 8px; }
+    #resultado { margin-top: 10px; font-weight: bold; }
+  </style>
+</head>
+<body>
+  <h2>Identificador de Triángulo</h2>
+  <input type="number" id="lado1" placeholder="Lado 1">
+  <input type="number" id="lado2" placeholder="Lado 2">
+  <input type="number" id="lado3" placeholder="Lado 3">
+  <br>
+  <button onclick="determinarTriangulo()">Calcular</button>
+  <div id="resultado"></div>
 
-    <script></script>
-  </body>
+  <script>
+    function determinarTriangulo() {
+
+    }
+  </script>
+</body>
 </html>
